  print approximately 2*N bytes of extraneous padding.
  [Bug introduced in coreutils-7.0]

  tail --retry -f now waits for the files specified to appear.  Before, tail
  would immediately exit when such a file is inaccessible during the initial
  open.
  [This bug was introduced when inotify support was added in coreutils-7.5]

** New features

  ls -Z and id -Z report the SMACK security context where available.

  join accepts a new option: --zero-terminated (-z). As with the sort,uniq
  option of the same name, this makes join consume and produce NUL-terminated
  lines rather than newline-terminated lines.

  uniq accepts a new option: --group to print all items, while separating
  unique groups with empty lines.

  csplit accepts a new option: --suppressed-matched, to elide the lines
  used to identify the split points.

** Changes in behavior

  stdbuf now requires at least one buffering mode option to be specified,
  as per the documented interface.

** Improvements

  stat and tail work better with EFIVARFS, EXOFS, F2FS, SNFS and UBIFS.
  stat -f --format=%T now reports the file system type, and tail -f now uses
  inotify for files on those file systems, rather than the default (for unknown
  file system types) of issuing a warning and reverting to polling.

  shuf outputs subsets of large inputs much more efficiently.
  Reservoir sampling is used to limit memory usage based on the number of
  outputs, rather than the number of inputs.

  split --line-bytes=SIZE, now only allocates memory as needed rather
  than allocating SIZE bytes at program start.

** Build-related

  factor now builds on aarch64 based systems [bug introduced in coreutils-8.20]


* Noteworthy changes in release 8.21 (2013-02-14) [stable]

** New programs

  numfmt: reformat numbers

** New features

  df now accepts the --output[=FIELD_LIST] option to define the list of columns
  to include in the output, or all available columns if the FIELD_LIST is