@@ -29,7 +29,8 @@ GNU coreutils NEWS                                    -*- outline -*-
 
 ** New features
 
-  ls -Z and id -Z report the SMACK security context where available.
+  id and ls with -Z report the SMACK security context where available.
+  mkdir, mkfifo and mknod with -Z set the SMACK context where available.
 
   join accepts a new option: --zero-terminated (-z). As with the sort,uniq
   option of the same name, this makes join consume and produce NUL-terminated
